[package]
name = "rs-z2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rs_z2p"

[dependencies]
actix-web = "4.3.0"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.14"
